# Crossly

./: .gitignore  CMakeLists.txt  LICENSE  README.md  instruction.txt  main.cpp
core/: debug.hpp  graphic_utils.hpp  intersection.hpp  polygon.hpp  settings.h  square.hpp  utils.hpp
